# patrick-langgraph-gemini

./: .env.example  .gitignore  ARCHITECTURE.md  Justfile  README.md  REQUIREMENTS.md  log_config.yaml  pyproject.toml  requirements.txt
app/: dependencies.py  llm.py  main.py
app/config/: prompts.py
app/config/prompts/: dev_lead_agent.txt  po_agent.txt
app/graph/: llm_schemas.py  state.py  workflow.py
app/interfaces/: github_version_control.py  linear_ticket_store.py  ticket_store.py  version_control.py
app/tools/: file_system.py  github.py
tests/: test_integration.py  test_interfaces.py  test_linear.py  test_llm.py  test_main.py  test_workflow.py
